--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .idea
 __pycache__
 data.txt
-tokenizer.json
+tokenizer_src.json
+tokenizer_tgt.json
 train_loss.json
 val_loss.json
 best_model.pth
